--- a/NgheNhacTrucTuyen/NgheNhacTrucTuyen.csproj
+++ b/NgheNhacTrucTuyen/NgheNhacTrucTuyen.csproj
@@ -187,9 +187,9 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
