--- a/NgheNhacTrucTuyen/Web.config
+++ b/NgheNhacTrucTuyen/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="WebNhacConnectionString" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True"
+    <add name="WebNhacConnectionString" connectionString="Data Source=LAPTOP-3BIGATCD;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True"
       providerName="System.Data.SqlClient" />
-    <add name="WebNhacConnectionString1" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True"
+    <add name="WebNhacConnectionString1" connectionString="Data Source=LAPTOP-3BIGATCD;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
