Thêm nhạc + chỉnh FE

--- a/NgheNhacTrucTuyen/Web.config
+++ b/NgheNhacTrucTuyen/Web.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Cấu hình cho ứng dụng ASP.NET
+  Data Source=LAPTOP-3BIGATCD;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True;Connection Timeout=60;
 -->
 <configuration>
 	<!-- Kết nối cơ sở dữ liệu -->
 	<connectionStrings>
-		<add name="WebNhacConnectionString" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
-		<add name="WebNhacConnectionString1" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+		<add name="WebNhacConnectionString" connectionString="Data Source=LAPTOP-3BIGATCD;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True;Connection Timeout=60;" providerName="System.Data.SqlClient" />
+		<add name="WebNhacConnectionString1" connectionString="Data Source=LAPTOP-3BIGATCD;Initial Catalog=WebNhac;Integrated Security=True;TrustServerCertificate=True;Connection Timeout=60;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<!-- Cài đặt ứng dụng -->
